sass/_typography.sass
@use "_base" as *

$sans-serif-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
$monospace-fonts: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace

body
  color: var(--foreground-color)
  font-family: $sans-serif-fonts
  line-height: 1.6
  font-size: 13pt

header
  background-color: white

footer
  background-color: var(--heading-color)
  color: white
  text-align: right

h1, h2, h3, h4, h5, h6
  color: var(--heading-color)

h1
  font-size: 3em
  line-height: 1

a
  color: var(--highlight-color)

code
  font-family: $monospace-fonts
  font-size: 85%
  padding: .1em .2em
  background-color: var(--background-color)
  border-radius: 5px

